try enforcing a policy as an attempt to prevent system changes